--- a/AsyncNet/NLog.config
+++ b/AsyncNet/NLog.config
@@ -3,10 +3,10 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true">
 
   <targets>
-    <target name="logfile" xsi:type="File" fileName="info.log" />
+    <target name="logfile" xsi:type="File" fileName="Y:\info.log" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <logger name="*" minlevel="Info" writeTo="logfile" />
   </rules>
 </nlog>
