--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 /XVideo/Properties/PublishProfiles
 /XVideo/obj
 /XVideo/bin
+/.vs/XVideo/v16/.suo
+/.vs/XVideo/v16
+/.vs/XVideo/DesignTimeBuild/.dtbcache.v2
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
